--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "main.html",
   "version": "1.0.0",
   "type": "module",
+  "require"
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
